basic version that can return only links that contain key word

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
     {{if .Valid_url}}
         Link that contains search keyword are:
-        {{range $key, $value := .All_urls}}
-            {{$key}}
-            {{$value}}
+        {{range $url := .Url_contain_keyword}}
+            {{ $url }}
         {{end}}
     {{end}}
 </body>
